@@ -1,4 +1,5 @@
 v0.15
+	* FIX : WMS projection related bugfixes
 	* ADD : Re-added tiled Yahoo! imagery as a plugin
 	* ADD : NearMap Austalian TMS to the default list
 	* FIX : corrected issues in image downloading
